# sovereign-gpu

./: Cargo.toml  pyproject.toml
src/: gpu_graph.rs  lib.rs  py_gpu_graph.rs  unified_gpu.rs
src/backends/: cuda.rs  mod.rs  vulkan.rs  webgpu.rs
src/gnn/: mod.rs
src/kernels/: bfs.wgsl  dfs.wgsl  gnn_embed.wgsl  planner_expand.wgsl  planner_prune.wgsl  planner_refine.wgsl  planner_score.wgsl  shortest.wgsl  topo.wgsl
src/planner/: mod.rs
