[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name            = "sovereign-gpu"
version         = "0.1.0"
description     = "Sovereign OS — unified GPU runtime (WebGPU / CUDA / Vulkan)"
requires-python = ">=3.11"

[tool.maturin]
features    = ["pyo3/extension-module"]
module-name = "sovereign_gpu"
